--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
      list-style-type: none;
      padding: 0;
      display: flex;
-     flex-wrap: wrap;
+     flex-wrap: inherit;
      justify-content: center;
  }
 
