--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@
      scale:(1.0, 1.0);
      transform: translateZ(0);
      background: #1B2030 url(./assets/images/contact-bg.jpg) 50% 0 no-repeat;
-     background-size: 100%;
+     background-size: cover;
      background-attachment: fixed;
      animation: grow 360s linear 10ms infinite;
      transition: all 0.4s ease-in-out;
