--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,18 @@
      margin: 10px 0;
  }
 
+ a#cartimg {
+    /* width: 40px; */
+    padding-right: 40px;
+    padding-left: 40px;
+}
+#cartimg {
+    background: url(./assets/images/icons8-cart-48.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+    background-position: center;
+}
  .view-details {
      background-color: orange;
      color: white;
